# ntpsec

./: .arcconfig  .arclint  .gitignore  .gitlab-ci-docker-images.yml  .gitlab-ci.yml  .gitlab-docker-ci.yml  .gitlab-opttest-ci.yml  .point-changed-filelist  .travis.yml  BUGS  COPYRIGHT  ChangeLog  HOWTO-OpenSSL  INSTALL  INSTALL.adoc  INSTALLv6.txt  LICENSE  LICENSE.adoc  Makefile.am  Makefile.in  NEWS  NEWS.adoc  NOTES.y2kfixes  PIVOT.h  README  README-PYTHON  README.adoc  README.bk  README.cvs  README.des  README.hackers  README.patches  README.refclocks  README.rsa  README.simulator  README.snap  README.versions  TODO  VERSION  acconfig.h  (+30 more)
adjtimed/: Makefile.am  Makefile.in  adjtimed.c  wscript
clockstuff/: Makefile.am  Makefile.in  README  chutest.c  clktest-opts.c  clktest-opts.def  clktest-opts.h  clktest.c  propdelay.c
gsoc_sntp/: :fetch-stubs  Makefile  Makefile.am  Makefile.in  configure.ac  crypto.c  crypto.h  data_formats.h  header.h  kod_management.c  kod_management.h  log.c  log.h  main.c  networking.c  networking.h  sntp-opts.c  sntp-opts.def  sntp-opts.h  sntp-opts.texi  sntp.1  utilities.c  utilities.h
include/: Makefile.am  Makefile.in  PIVOT.h  README  adjtime.h  aes_siv_evp.h  ascii.h  audio.h  autogen-version.def  binio.h  copyright.def  debug-opt.def  declcond.h  des.h  global.h  gpstolfp.h  hack-ancient-openssl.h  hopf6039.h  icom.h  ieee754io.h  interfaceiter.h  intreswork.h  iosignal.h  isc_error.h  isc_interfaceiter.h  isc_mem.h  isc_netaddr.h  isc_result.h  l_stdlib.h  lib_strbuf.h  libntp.h  libssl_compat.h  mbg_gps166.h  md2.h  md5.h  ntif.h  ntp.h  ntp_assert.h  ntp_auth.h  ntp_calendar.h  (+64 more)
libopts/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  ag-char-map.h  autoopts.c  autoopts.h  boolean.c  bootstrap  config-h.in  config-h.in~  configfile.c  configure  configure.ac  cook.c  enumeration.c  environment.c  file.c  genshell.c  genshell.h  libopts.c  libopts.m4  load.c  makeshell.c  nested.c  numeric.c  options.h  pgusage.c  proto.h  putshell.c  reset.c  restore.c  save.c  sort.c  stack.c  streqv.h  streqvcmp.c  (+9 more)
libparse/: Makefile.am  Makefile.in  README  binio.c  clk_computime.c  clk_dcf7000.c  clk_hopf6021.c  clk_meinberg.c  clk_rawdcf.c  clk_rcc8000.c  clk_schmid.c  clk_sel240x.c  clk_trimtaip.c  clk_trimtsip.c  clk_varitext.c  clk_wharton.c  data_mbg.c  gpstolfp.c  ieee754io.c  info_trimble.c  kclk_computime.c  kclk_dcf7000.c  kclk_hopf6021.c  kclk_meinberg.c  kclk_rawdcf.c  kclk_rcc8000.c  kclk_schmid.c  kclk_trimtaip.c  kclk_trimtsip.c  kclk_varitext.c  kparse.c  kparse_conf.c  mfp_mul.c  parse.c  parse_conf.c  parsesolaris.c  parsestreams.c  trim_info.c  wscript
librsaref/: Makefile.am  Makefile.in
ntpd/: LOOP.C  Makefile.am  Makefile.in  check-config.sh  check_y2k.c  cmd_args.c  complete.conf  complete.conf.in  declcond.h  invoke-ntp.conf.menu  invoke-ntp.conf.texi  invoke-ntp.keys.menu  invoke-ntp.keys.texi  invoke-ntpd.texi  jupiter.h  keyword-gen-utd  keyword-gen.c  map_vme.c  ntp.conf-man.adoc  ntp.conf-man.txt  ntp.conf.5man  ntp.conf.5mdoc  ntp.conf.def  ntp.conf.html  ntp.conf.man.in  ntp.conf.mdoc.in  ntp.conf.texi  ntp.conf.txt  ntp.keys-man.adoc  ntp.keys-man.txt  ntp.keys.5man  ntp.keys.5mdoc  ntp.keys.def  ntp.keys.html  ntp.keys.man.in  ntp.keys.mdoc.in  ntp.keys.texi  ntp.keys.txt  ntp_config.c  ntp_config.tab.c  (+134 more)
ntpdate/: Makefile.am  Makefile.in  ntpdate.c  ntpdate.h  ntpdate.mak-  ntptime_config.c  ntptimeset.c  wscript
ntpdc/: Makefile.am  Makefile.in  invoke-ntpdc.texi  layout.std  nl.pl  nl.pl.in  nl_in.c  ntpdc-opts.c  ntpdc-opts.def  ntpdc-opts.h  ntpdc-opts.menu  ntpdc-opts.texi  ntpdc.1  ntpdc.1ntpdcman  ntpdc.1ntpdcmdoc  ntpdc.c  ntpdc.h  ntpdc.html  ntpdc.mak-  ntpdc.man.in  ntpdc.mdoc.in  ntpdc.texi  ntpdc_ops.c  wscript
ntpq/: Makefile.am  Makefile.in  README  invoke-ntpq.texi  libntpq.c  libntpq.h  libntpq.py  libntpq_subs.c  ntpq  ntpq-man.txt.in  ntpq-opts.c  ntpq-opts.def  ntpq-opts.h  ntpq-opts.menu  ntpq-opts.texi  ntpq-subs.c  ntpq.1  ntpq.1ntpqman  ntpq.1ntpqmdoc  ntpq.c  ntpq.h  ntpq.html  ntpq.mak-  ntpq.man.in  ntpq.mdoc.in  ntpq.texi  ntpq.txt  ntpq_ops.c  pyntpq  wscript
ntpsnmpd/: Makefile.am  invoke-ntpsnmpd.texi  netsnmp_daemonize.c  ntpSnmpSubagentObject.c  ntpSnmpSubagentObject.h  ntpsnmpd-opts.c  ntpsnmpd-opts.def  ntpsnmpd-opts.h  ntpsnmpd-opts.menu  ntpsnmpd-opts.texi  ntpsnmpd.1  ntpsnmpd.1ntpsnmpdman  ntpsnmpd.1ntpsnmpdmdoc  ntpsnmpd.c  ntpsnmpd.html  ntpsnmpd.man.in  ntpsnmpd.mdoc.in  ntpsnmpd.txt  ntpv4-mib.mib
parseutil/: Makefile.am  Makefile.in  dcfd.c  testdcf.c  wscript
scripts/: Makefile.am  Makefile.in  README  UpdatePoint  VersionName  addChangeLogTag  check--help  checkChangeLog  cvo.sh  genChangeLogTag  genCommitLog  genLocInfo  genver  html2man.pl  invoke-ntp-wait.texi  invoke-plot_summary.texi  invoke-summary.texi  mkver.in  mkversion  ntp-wait-opts.def  ntp-wait-opts.texi  ntp-wait.1  ntp-wait.1ntp-waitman  ntp-wait.1ntp-waitmdoc  ntp-wait.html  ntp-wait.in  ntp-wait.man.in  ntp-wait.mdoc.in  ntp-wait.texi  ntpdate  ntpsweep  ntpsweep.in  ntptrace.in  plot_summary  plot_summary-opts  plot_summary.1plot_summaryman  plot_summary.1plot_summarymdoc  plot_summary.html  plot_summary.in  plot_summary.man.in  (+13 more)
sntp/: Makefile.am  Mf  RFC2030.TXT  RFC4330.TXT  check-libntp.mf  check-libopts.mf  configure.ac  crypto.c  crypto.h  deps-ver  draft-mills-sntp-v4-00.txt  fetch-stubs  header.h  internet.c  internet.h  invoke-sntp.texi  kod_management.c  kod_management.h  libopts.m4  log.c  log.h  main.c  main.h  netutils.c  netutils.h  networking.c  networking.h  sntp-man.txt.in  sntp-opts.c  sntp-opts.def  sntp-opts.h  sntp-opts.menu  sntp-opts.texi  sntp.1  sntp.1sntpman  sntp.1sntpmdoc  sntp.c  sntp.html  sntp.man.in  sntp.mdoc.in  (+10 more)
util/: Makefile.am  Makefile.in  README  ansi2knr.c  audio-pcm.c  bumpclock.c  genkeys.c  hist.c  invoke-ntp-keygen.texi  jitter.c  jitter.h  kern.c  ntp-genkeys.c  ntp-keygen-opts.c  ntp-keygen-opts.def  ntp-keygen-opts.h  ntp-keygen-opts.menu  ntp-keygen-opts.texi  ntp-keygen.1  ntp-keygen.1ntp-keygenman  ntp-keygen.c  (+24 more)
(+2064 files in other folders)
