#AUTOMAKE_OPTIONS = ../util/ansi2knr no-dependencies
AUTOMAKE_OPTIONS = ../util/ansi2knr
noinst_HEADERS = adjtime.h global.h gps.h l_stdlib.h md5.h mx4200.h \
ntif.h ntp.h ntp_calendar.h ntp_control.h ntp_datum.h ntp_filegen.h ntp_fp.h \
ntp_if.h ntp_io.h ntp_machine.h ntp_malloc.h ntp_proto.h ntp_refclock.h \
ntp_request.h ntp_select.h ntp_stdlib.h ntp_string.h ntp_syslog.h \
ntp_types.h ntp_unixtime.h ntpd.h parse.h parse_conf.h \
binio.h mbg_gps166.h ieee754io.h ascii.h trimble.h

ETAGS_ARGS = $(srcdir)/Makefile.am
#EXTRA_DIST = TAGS
