## LIBOPTS Makefile
MAINTAINERCLEANFILES  = Makefile.in
lib_LTLIBRARIES       = libopts.la
libopts_la_SOURCES    = libopts.c
libopts_la_LDFLAGS    = -version-info  23:0:14
EXTRA_DIST            = COPYING.lgpl COPYING.mbsd compat \
    autoopts.c    autoopts.h    boolean.c     enumeration.c environment.c  \
    genshell.c    genshell.h    libopts.c     load.c        makeshell.c  \
    numeric.c     options.h     pgusage.c     putshell.c    restore.c  \
    save.c        sort.c        stack.c       streqv.h      streqvcmp.c  \
    tokenize.c    tokenize.h    usage-txt.h   usage.c       version.c
